# java-llama.cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  SUPPORT.md  TODO.md  lombok.config  pom.xml  spotbugs-exclude.xml
.github/: FUNDING.yml  build.bat  build.sh  build_cuda_linux.sh  build_opencl_android.sh  build_opencl_windows.bat  dependabot.yml  models.csv  package-fatjars.sh  run-android-emulator-test.sh  run-android-example-test.sh  run-android-llmservice-test.sh  smoke-test-fatjar.ps1  smoke-test-fatjar.sh  validate-models.bat  validate-models.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/android-consumer-test/: README.md  gradle.properties  settings.gradle.kts
.github/android-consumer-test/app/: build.gradle.kts
.github/android-consumer-test/app/src/main/: AndroidManifest.xml
.github/dockcross/: dockcross-android-arm  dockcross-android-arm64  dockcross-android-x86_64  dockcross-linux-arm64-lts  dockcross-manylinux2014-x64  dockcross-manylinux_2_28-x64  update.sh
.github/scripts/: llama-next-version.sh
.github/signing-selftest/: build.gradle.kts  settings.gradle.kts
.github/workflows/: clang-format.yml  claude-code-review.yml  claude.yml  codeql.yml  osv-scanner.yml  publish.yml  release.yaml  reuse.yml  scorecard.yml  sonarqube.yml
android-llmservice/: README.md  TODO.md  requirements.md  settings.gradle.kts
android-llmservice/app/: build.gradle.kts
android-llmservice/app/src/main/: AndroidManifest.xml
android-llmservice/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android-llmservice/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
android-llmservice/app/src/main/res/values-ar/: strings.xml
android-llmservice/app/src/main/res/values-de/: strings.xml
android-llmservice/app/src/main/res/values-es/: strings.xml
android-llmservice/app/src/main/res/values-fr/: strings.xml
android-llmservice/app/src/main/res/values-hi/: strings.xml
android-llmservice/app/src/main/res/values-it/: strings.xml
android-llmservice/app/src/main/res/values-ja/: strings.xml
android-llmservice/app/src/main/res/values-ko/: strings.xml
android-llmservice/app/src/main/res/values-pt/: strings.xml
android-llmservice/app/src/main/res/values-ru/: strings.xml
android-llmservice/app/src/main/res/values-tr/: strings.xml
android-llmservice/app/src/main/res/values-zh-rCN/: strings.xml
android-llmservice/app/src/main/res/xml/: locales_config.xml
android-llmservice/store/: README.md
cmake/: apply-llama-patches.cmake  generate-tts-upstream.cmake
docs/: RELEASE.md  feature-investigation-ide-agent-backend.md  feature-investigation-llama-stack-client-kotlin.md  feature-investigation-similar-projects.md  plan-llm-serving-server.md  plan-model-registry.md
docs/history/: 49be664_24918e4.md  49be664_open_issues.md  49be664_open_issues_comments.md  CHAT_INTEGRATION_SUMMARY.md  REFACTORING.md  llama-cpp-breaking-changes.md
docs/upgrade/: llama-cpp-version-bump.md
langchain4j-jllama/: README.md  pom.xml
llama/: .clang-format  .clang-tidy  CMakeLists.txt  pom.xml  spotbugs-exclude.xml
llama-android/: README.md  build.gradle.kts  consumer-proguard.txt  settings.gradle.kts
llama-android-example/: README.md  gradle.properties  settings.gradle.kts
llama-android-example/app/: build.gradle.kts  proguard-rules.pro
llama-android-example/app/src/main/: AndroidManifest.xml
llama-android-example/app/src/main/res/values/: strings.xml  themes.xml
llama-android/src/main/: AndroidManifest.xml
llama-kotlin/: README.md  pom.xml
llama-kotlin/src/javadoc-placeholder/: README.txt
llama-langchain4j/: README.md  pom.xml
llama/cmake/: generate-tts-upstream.cmake
llama/patches/: 0001-win32-arg-parse-embed-guard.patch  0005-server-recurrent-near-prompt-end-checkpoints.patch  0006-server-embed-native-server-jni.patch  0007-server-attach-http-frontend.patch  0008-server-models-worker-cmd-override.patch
llama/src/main/cpp/: jllama.cpp  jllama.h  jni_helpers.hpp  json_helpers.hpp  log_helpers.hpp  native_server.cpp  native_server_bridge.h  train_engine.cpp  tts_engine.cpp  tts_engine.h  tts_upstream.h  tts_wav.hpp
llama/src/test/cpp/: test_jni_helpers.cpp  test_json_helpers.cpp  test_server.cpp  test_tts_wav.cpp  test_utils.cpp
llama/src/test/java/examples/: InfillExample.java
llama/src/test/resources/audios/: README.md
patches/: 0001-win32-arg-parse-embed-guard.patch  0002-server-preserve-caller-load-progress-callback.patch  0003-pr22393-server-add-slot-prompt-similarity-getter-setter.patch  0004-pr23116-server-per-request-reasoning-budget-tokens.patch
src/main/cpp/: jllama.cpp  jllama.h  jni_helpers.hpp  json_helpers.hpp  log_helpers.hpp  server.hpp  train_engine.cpp  train_engine.h  tts_dsp.hpp  tts_engine.cpp  tts_engine.h  tts_upstream.h  utils.hpp  v_chat.hpp  v_clip.hpp  vision_server.hpp  vision_utils.hpp
src/main/cpp/compat/: ggml_x86_compat.c
src/main/cpp/webui_stub/: ui.h
src/main/java/: module-info.java
src/main/java/de/kherud/llama/: LlamaModel.java
src/main/java/net/ladenthin/llama/: CancellationToken.java  ChatChoice.java  ChatMessage.java  ChatRequest.java  ChatResponse.java  ChatTranscript.java  CliParameters.java  CompletionResult.java  ContentPart.java  InferenceParameters.java  Java8CompatibilityHelper.java  JsonParameters.java  LlamaException.java  LlamaIterable.java  LlamaIterator.java  LlamaLoader.java  LlamaModel.java  LlamaOutput.java  LlamaPublisher.java  LlamaSystemProperties.java  LlamaTrainer.java  LoadProgressCallback.java  LogLevel.java  ModelMeta.java  ModelParameters.java  ModelUnavailableException.java  OSInfo.java  Pair.java  (+16 more)
src/test/cpp/: test_jni_helpers.cpp  test_json_helpers.cpp  test_log_helpers.cpp  test_server.cpp  test_tts_dsp.cpp  test_tts_wav.cpp  test_utils.cpp
src/test/java/examples/: ChatExample.java  GrammarExample.java  InfillExample.java  MainExample.java  OpenAiServerExample.java
src/test/resources/images/: README.md
(+397 files in other folders)
